--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-	"email": "",
-	"password": "",
-	"courses": [
-		"https://cursos.alura.com.br/course/kubernetes-pods-services-configmap"
-	],
-    "formation": "formacao-Python-linguagem"
+	"email": "william.s.s@outlook.com",
+	"password": "S3nh@f0rt3",
+    "formations": [
+        "https://cursos.alura.com.br/formacao-jogos-unity",
+        "https://cursos.alura.com.br/formacao-Python-linguagem"
+    ]
 }
